{
    "main_title" : "Мои дела",
    "completed" : "Выполнено — ",
    "neww" : "Новое",
    "priority" : "Важность",
    "do_before" : "Сделать до",
    "none" : "Нет",
    "delete" : "Удалить",
    "save" : "СОХРАНИТЬ",
    "low" : "Низкий",
    "high" : "!! Высокий",
    "what_need_to_do" : "Что надо сделать...",
    "jan" : "января",
    "feb" : "февраля",
    "mar" : "марта",
    "apr" : "апреля",
    "may" : "мая",
    "jun" : "июня",
    "jul" : "июля",
    "aug" : "августа",
    "sep" : "сентября",
    "oct" : "октября",
    "nov" : "ноября",
    "dec" : "декабря",
    "empty_case" : "Пожалуйста, заполните задачу.",
    "connection_error" : "Ошибка подключения"
}